force-app/main/default/objects/tc9_pr__Calendar_Period__c/tc9_pr__Calendar_Period__c.object-meta.xml
<CustomObject>
    <label>Calendar Period</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>