force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_3bint__ProcessinScheduledJob__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__ProcessinScheduledJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProcessinScheduledJob</label>
    <type>Checkbox</type>
</CustomField>