force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_et__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Date__c</fullName>
    <description>Defines the expected Invoice Date for the Calendar Period. This can be modified during Invoice creation</description>
    <inlineHelpText>Defines the expected Invoice Date for the Calendar Period. This can be modified during Invoice creation</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>