force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Calendar__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Calendar record.</description>
    <inlineHelpText>The related Calendar record.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>tc9_pr__Calendar__c</referenceTo>
    <relationshipLabel>Calendar Periods</relationshipLabel>
    <relationshipName>Calendar_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>