force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Do_Not_Use__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Do_Not_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Where a calendar period has been created with incorrect details use this checkbox to exclude this record from selection during pay transaction creation</description>
    <inlineHelpText>Where a calendar period has been created with incorrect details use this checkbox to exclude this record from selection during pay transaction creation</inlineHelpText>
    <label>Do Not Use</label>
    <type>Checkbox</type>
</CustomField>