force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__End_Date__c</fullName>
    <description>The calendar period end date</description>
    <inlineHelpText>The calendar period end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>