force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__End_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__End_Time__c</fullName>
    <description>Defines the end time of the Public Holiday</description>
    <inlineHelpText>Defines the end time of the Public Holiday</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>