force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Date__c</fullName>
    <description>Defines the expected Pay Batch Calculation Date for the Calendar Period. This can be modified within the Pay Batch Manager</description>
    <inlineHelpText>Defines the expected Pay Batch Calculation Date for the Calendar Period. This can be modified within the Pay Batch Manager</inlineHelpText>
    <label>Payroll Date</label>
    <type>Date</type>
</CustomField>