force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Public_Holiday_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Public_Holiday_Description__c</fullName>
    <label>Public Holiday Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>