force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Quarter_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Quarter_End_Date__c</fullName>
    <description>Determines which quarter a calendar period will be included in during Payee Aggregate creation</description>
    <inlineHelpText>Determines which quarter a calendar period will be included in during Payee Aggregate creation</inlineHelpText>
    <label>Quarter End Date</label>
    <type>Date</type>
</CustomField>