force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Quarter_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Quarter_Start_Date__c</fullName>
    <description>The start date of the quarter this calendar period falls within.</description>
    <formula>ADDMONTHS(tc9_pr__Quarter_End_Date__c , -3) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The start date of the quarter this calendar period falls within.</inlineHelpText>
    <label>Quarter Start Date</label>
    <type>Date</type>
</CustomField>