force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Start_Date__c</fullName>
    <description>The calendar period start date</description>
    <inlineHelpText>The calendar period start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>