force-app/main/default/objects/tc9_pr__Calendar_Period__c/fields/tc9_pr__Year_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Year_Start_Date__c</fullName>
    <description>The start date of the year this calendar period falls within.</description>
    <formula>(ADDMONTHS(tc9_pr__Year_End_Date__c,-12))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The start date of the year this calendar period falls within.</inlineHelpText>
    <label>Year Start Date</label>
    <type>Date</type>
</CustomField>