force-app/main/default/objects/tc9_pr__Calendar_Period__c/recordTypes/tc9_et__Invoice.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Invoice</fullName>
    <active>true</active>
    <description>To be used for Invoice Calendar Periods</description>
    <label>Invoice</label>
</RecordType>